--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Giddy Up!</a>
+    
   </header>
-
+<a class="home-button" href="/signin.html">Giddy Up!</a>
   <section class="home-about">
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Work?</h2>
