--- a/register.html
+++ b/register.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="/css/message.css">
+		<link rel="stylesheet" href="css/main.css">
+		 
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -47,8 +49,13 @@
 
               <input type="submit" value="Let's Ryde">
             </form>
+			
+			
         </section>
-
+		<div class="page-home">
+			<p style="text-align:center">Already have an account?</p>
+			<a class="home-button" href="signin.html">Sign in here!</a>
+		</div>
         <script src="js/vendor/jquery-3.1.0.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/aws-cognito-sdk.min.js"></script>
