--- a/signin.html
+++ b/signin.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="/css/message.css">
+		<link rel="stylesheet" href="css/main.css">
+		
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -48,7 +50,10 @@
               <input type="submit" value="Sign in">
             </form>
         </section>
-
+		<div class="page-home">
+			<a class="home-button" href="register.html">Register here!</a>
+		</div>
+		
         <script src="js/vendor/jquery-3.1.0.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/aws-cognito-sdk.min.js"></script>
