--- a/ride.html
+++ b/ride.html
@@ -95,11 +95,11 @@
     <script src="https://js.arcgis.com/4.3/"></script>
     <script src="js/config.js"></script>
     <script src="js/cognito-auth.js"></script>
-    <script>
+    <script type='text/javascript'>
         var addressGlobal = "";
     </script>
-    <script src="js/esri-map.js"></script>
-    <script src="js/ride.js"></script>
+    <script type='text/javascript' src="js/esri-map.js"></script>
+    <script type='text/javascript' src="js/ride.js"></script>
 </body>
 
 </html>
